<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <POU Name="Vereisung" Id="{c06eee5f-b84b-4826-8ee5-3ea1b679b266}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Vereisung
(*Ablaufprogram für die Vereisung des Verdampfers. Beim ABBRUCH des Vorgangs bzw. ABSCHALTEN wird ein PumpDown vollzogen.  *)
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*Starte Timer zur Vereisung*)	
	IF NOT TimerVereisung.IN THEN
	TimerVereisung(IN:= TRUE, PT:= T#1H);
	END_IF
	
(*Die Schütze 1K3 und 1K5 werden durch bKühlen geschaltet:
					-Magnetventile 1Y5,1Y6 werden geschlossen 
					-4-Wegeventil auf Kühlen geschaltet
					-VF_Ventilator bekommt Freigabe*)
 		
	IF SM.bKuehlen THEN 
		fb_Schuetzstellung(myStatus := KuehlenUnten);
		EV.SetKuhlleistung := TRUE;
		EV.SollKuhlleistung:= 100; 
	END_IF
	
(*Abtauung wird begonnen wenn Zeit des Timers abgelaufen ist*)
	IF TimerVereisung.Q THEN
		TimerVereisung.IN := FALSE;			//Reset vom Vereisungstimer
		Mitteilung:= 'Die Vereisungszeit ist abgeschlossen';
		
		(*Nach der Vereisung wird ein PumpDown durchgeführt*)
		SM.bPumpDown := TRUE; 
		
		(* Status-Maschine Bool-variablen werden auf TRUE bzw. FALSE gesetzt*)
		SM.bKuehlen := FALSE;		
	END_IF

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>